--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,57 @@
 @import "bootstrap";
+
+@import "variables";
+@import "animations";
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    box-sizing: border-box;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    /* font-size: 16px; */
+    line-height: 1.7;
+    color: $color-dark-grey;
+}
+
+
+
+.u-center-text {
+    text-align: center;
+}
+
+.u-margin-bottom-8 {
+    margin-bottom: 8rem;
+}
+.u-margin-bottom-medium {
+    margin-bottom: 4rem;
+}
+.u-margin-bottom-2 {
+    margin-bottom: 2rem;
+}
+
+.abs-center-x {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@mixin clearfix {
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
+@mixin absCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+@import 'pages';
