--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,19 +10,7 @@
         <div class="navbar-collapse collapse dual-nav w-50 order-1 order-md-0">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link pl-0" href="#">Home <span class="sr-only">Home</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="//codeply.com">Codeply</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <button class="btn btn-primary">Quote</button>
                 </li>
             </ul>
         </div>
@@ -31,8 +19,12 @@
         </a>
         <div class="navbar-collapse collapse dual-nav w-50 order-2">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                <li class="nav-item">
+                    <%= link_to "Products", products_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "Contact", contact_path, class: 'nav-link' %>
+                </li>
             </ul>
         </div>
     </div>
