--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -145,7 +145,7 @@
 .custom-header {
   padding-top: 6rem;
   height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('../../images/warehouse.jpg');
+  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('AdobeStock_62695127.jpeg');
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -196,7 +196,7 @@
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('../images/warehouse.jpg');
+  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('../images/AdobeStock_114530769.jpeg');
   background-size: cover;
   margin-top: -10rem;
 }
