--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,79 +1,87 @@
-<section class="custom-header">
+<div class="jumbotron jumbotron-fluid">
   <div class="custom-header__text-box">
-    <h1 class="heading-primary">
-      <span class="heading-primary--main">NSN Parts</span>
-      <span class="heading-primary--sub">Should not be hard to find</span>
-    </h1>
-    <a href="/products" class="custom-btn custom-btn--white custom-btn--animated">Browse</a>
-  </div>
-</section>
+  <h1 class="heading-primary">
+    <span class="heading-primary--main">NSN Parts</span>
+    <span class="heading-primary--sub">Let us find them for you</span>
+  </h1>
+  <a href='/products' class='custom-btn custom-btn--white custom-btn--animated'>Browse</a>
+</div>
+</div>
 <section class='section-about'>
   <div class='u-center-text u-margin-bottom-8'>
     <h2 class='heading-secondary'>Our Story</h2>
   </div>
-  <div class='row'>
-    <div class='col-sm-6 md-col'>
-      <h3 class='heading-tertiary u-margin-bottom-2'>Our Founding</h3>
-      <p class='paragraph'>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi quo recusandae voluptatibus animi perferendis, tempora
-        voluptatem est, nam saepe, veritatis ipsa et sint? Temporibus officiis quo maxime voluptas veniam rerum.
-      </p>
-      <h3 class='heading-tertiary u-margin-bottom-2'>Our Services</h3>
-      <p class='paragraph'>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi quo recusandae voluptatibus animi perferendis, tempora
-        voluptatem est, nam saepe, veritatis ipsa et sint? Temporibus officiis quo maxime voluptas veniam rerum.
-      </p>
-    </div>
-    <div class='col-sm-6'>
-      <div class='composition'>
-        <%= image_tag 'tile.jpg', alt: 'Photo 1', class: 'composition__photo composition__photo--p1' %>
-        <%= image_tag 'tile.jpg', alt: 'Photo 2', class: 'composition__photo composition__photo--p2' %>
-        <%= image_tag 'tile.jpg', alt: 'Photo 3', class: 'composition__photo composition__photo--p3' %>
+    <div class='row'>
+      <div class='col-sm-12 col-md-6'>
+        <h3 class='heading-tertiary u-margin-bottom-2'>Our Founding</h3>
+        <p class='paragraph'>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi quo recusandae voluptatibus animi perferendis, tempora voluptatem est, nam saepe, veritatis ipsa et sint? Temporibus officiis quo maxime voluptas veniam rerum.
+        </p>
+        <h3 class='heading-tertiary u-margin-bottom-2'>Our Services</h3>
+        <p class='paragraph'>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi quo recusandae voluptatibus animi perferendis, tempora voluptatem est, nam saepe, veritatis ipsa et sint? Temporibus officiis quo maxime voluptas veniam rerum.
+        </p>
       </div>
-    </div>
+      <div class='col-sm-12 col-md-6'>
+        <div class='composition'>
+          <%= image_tag 'tile.jpg', alt: 'Photo 1', class: 'composition__photo composition__photo--p1' %>
+          <%= image_tag 'tile.jpg', alt: 'Photo 2', class: 'composition__photo composition__photo--p2' %>
+          <%= image_tag 'tile.jpg', alt: 'Photo 3', class: 'composition__photo composition__photo--p3' %>
+        </div>
+      </div>
   </div>
 </section>
 <section class='section-features'>
-  <div class='container-fluid'>
-    <div class='row'>
-      <div class='col-sm-3'>
-        <div class='feature-box'>
-          <i class='feature-box__icon icon-basic-world'></i>
-          <h3 class='tertiary-heading u-margin-bottom-2'>Shipping to all 50 States</h3>
-          <p class='feature-box__text'>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse animi id numquam alias labore illo laboriosam tempore praesentium
-            quod vero! Laudantium dignissimos esse et eum. Vel assumenda quos odit nobis.
-          </p>
+  <div class='row'>
+    <div class='col-sm-6 col-md-3'>
+      <div class="card" style="opacity: 0.7;">
+        <div class="card-body">
+           <i class="icon-basic-accelerator"></i>
+          <h5 class="card-title">
+            Veteran Owned and Operared
+          </h5>
+
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-      <div class='col-sm-3'>
-        <div class='feature-box'>
-          <i class='feature-box__icon basic-accelerator'></i>
-          <h3 class='tertiary-heading u-margin-bottom-2'>Fast Shipping</h3>
-          <p class='feature-box__text'>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse animi id numquam alias labore illo laboriosam tempore praesentium
-            quod vero! Laudantium dignissimos esse et eum. Vel assumenda quos odit nobis.
-          </p>
+    </div>
+    <div class='col-sm-6 col-md-3'>
+      <div class="card" style="opacity: 0.7;">
+        <div class="card-body">
+           <i class="icon-basic-accelerator"></i>
+          <h5 class="card-title">
+            Shipping to all 50 states
+          </h5>
+
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-      <div class='col-sm-3'>
-        <div class='feature-box'>
-          <i class='feature-box__icon basic-clockwise'></i>
-          <h3 class='tertiary-heading u-margin-bottom-2'>Quick Quote Turnover</h3>
-          <p class='feature-box__text'>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse animi id numquam alias labore illo laboriosam tempore praesentium
-            quod vero! Laudantium dignissimos esse et eum. Vel assumenda quos odit nobis.
-          </p>
+    </div>
+    <div class='col-sm-6 col-md-3'>
+      <div class="card" style="opacity: 0.7;">
+        <div class="card-body">
+           <i class="icon-basic-accelerator"></i>
+          <h5 class="card-title">
+            Quick Quote Turnover
+          </h5>
+
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-      <div class='col-sm-3'>
-        <div class='feature-box'>
-          <i class='feature-box__icon icon-basic-heart'></i>
-          <h3 class='tertiary-heading u-margin-bottom-2'>Customer Satisfaction</h3>
-          <p class='feature-box__text'>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse animi id numquam alias labore illo laboriosam tempore praesentium
-            quod vero! Laudantium dignissimos esse et eum. Vel assumenda.
-          </p>
+    </div>
+    <div class='col-sm-6 col-md-3'>
+      <div class="card" style="opacity: 0.7;">
+        <div class="card-body">
+           <i class="icon-basic-accelerator"></i>
+          <h5 class="card-title">
+            Customer Satisfaction
+          </h5>
+
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     </div>
