--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,11 @@
-@import "bootstrap";
+@import 'bootstrap';
 
+// FONT
+$default-font-size: 1.6rem;
 @import "variables";
 @import "animations";
+@import "utilities";
 
-html {
-    font-size: 66.5%;
-}
 
 body {
     box-sizing: border-box;
@@ -17,41 +17,35 @@ body {
 }
 
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, $color-blue, $color-blue-dark);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all .2s;
 
-.u-center-text {
-    text-align: center;
-}
-
-.u-margin-bottom-8 {
-    margin-bottom: 8rem;
-}
-.u-margin-bottom-medium {
-    margin-bottom: 4rem;
-}
-.u-margin-bottom-2 {
-    margin-bottom: 2rem;
-}
-
-.abs-center-x {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+  &:hover {
+      transform: skewY(3deg) skewX(5deg) scale(1.1);
+      text-shadow: .5rem 1rem 2rem rgba($color-dark-grey, .2);
+  }
 }
 
-@mixin clearfix {
-    &::after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
 }
 
-@mixin absCenter {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.paragraph {
+  font-size: 1.6rem;
+  &:not(:last-child) {
+      margin-bottom: 3rem;
+  }
 }
 
 
 @import 'pages';
+@import 'header';
