--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,202 +1,200 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.custom-btn {
-    &:link,
-    &:visited{
-      text-transform: uppercase;
-      text-decoration: none;
-      padding: 1.5rem 4rem;
-      display: inline-block;
-      border-radius: 10rem;
-      transition: all .2s;
-      position: relative;
-      font-size: $default-font-size;
-    }
-  
-    &:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
-  
-      &::after {
-        transform: scaleX(1.4) scaleY(1.6);
-        opacity: 0;
-      }
-    }
-    &:active {
-      transform: translateY(-1px);
-      box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    }
-  
-    &--white {
-      background-color: #fff;
-      color: #777;
-  
-      &::after {
-        background-color: #fff;
-      }
-    }
-  
-    &::after {
-      content: "";
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-      border-radius: 10rem;
+.jumbotron {
+    height: 85vh;
+    background: url("AdobeStock_58555414.jpeg");
+    background-size: cover;
+    background-position: top;
+
+    .custom-header__text-box {
       position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      transition: all .4s;
-    }
-  
-   
-  
-    &--animated {
-      animation: moveInBottom .5s ease-out .75s;
-      animation-fill-mode: backwards;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
     }
   }
 
-  .custom-btn-text {
-    &:link, &:visited {
-      font-size: $default-font-size;
-      color: $color-blue;
-      display: inline-block;
-      text-decoration: none;
-      border-bottom: 1px solid $color-blue;
-      padding: 3px;
-      transition: all .2s;
-    }
+  .heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  padding-top: 8rem;
+  margin-bottom: 3rem;
 
-    &:hover {
-      background-color: $color-blue;
-      color: white;
-      box-shadow: 0 1rem 2rem rgba($color-black, .15);
-      transform: translateY(-2px);
-    }
-
-    &:active {
-      box-shadow: 0 .5rem 1rem rgba($color-black, .15);
-      transform: translateY(0);
-    }
+  &--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3rem;
+    animation-name: moveInLeft;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-timing-function: ease-out;
   }
 
-  .composition {
+  &--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
+    animation-name: moveInRight;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-timing-function: ease-out;
+  }
+}
+
+.custom-btn {
+
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all .2s;
     position: relative;
+    font-size: $default-font-size;
+  }
 
-    &__photo {
-        width: 55%;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
-        border-radius: 2px;
-        position: absolute;
-        z-index: 10;
-        transition: all .2s;
-        
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
 
-        &--p1 {
-            left: 0;
-            top: -2rem;
-        }
-        &--p2 {
-            right: 0;
-            top: 2rem;
-        }
-        &--p3 {
-            left: 20%;
-            top: 10rem;
-        }
-
-        &:hover {
-            transform: scale(1.5) translateY(-.5rem);
-            box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
-            z-index: 20;
-
-        }
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
     }
+  }
 
-    &:hover &__photo:not(:hover) {
-        transform: scale(.9);
+  &:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  }
+
+  &--white {
+    background-color: #fff;
+    color: #777;
+
+    &::after {
+      background-color: #fff;
     }
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+  }
+
+  &--animated {
+    animation: moveInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
+  }
+}
+
+.custom-btn-text {
+
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-blue;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-blue;
+    padding: 3px;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $color-blue;
+    color: white;
+    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    transform: translateY(0);
+  }
+}
+
+$color-light-grey: #f7f7f7;
+$color-black: #000;
+.section-about {
+  background-color: $color-light-grey;
+  padding: 3rem 0;
+  margin-top: -10vh;
+}
+
+.composition {
+  position: relative;
+  &__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    &--p1 {
+      left: 0;
+      top: -2rem;
+    }
+    &--p2 {
+      right: 0;
+      top: 2rem;
+    }
+    &--p3 {
+      left: 20%;
+      top: 10rem;
+    }
+    &:hover {
+      transform: scale(1.5) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+      z-index: 20;
+    }
+  }
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.9);
+  }
+}
+
+.section-features {
+  height: 75vh;
+  padding: 15rem 0;
+  background: url('delivery.jpeg') no-repeat center center fixed;
+  // background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('../images/warehouse.jpg');
+  background-size: cover;
+  //margin-top: -10rem;
 }
 
 .feature-box {
-    background-color: rgba($color-white, .8);
-    font-size: 1.5rem;
-    padding: 2.5rem;
-    text-align: center;
-    border-radius: 3px;
-    box-shadow: 0 1.0rem rgba($color-black, .15);
-    transition: transform .3s;
-    
-    &__icon {
-        font-size: 6rem;
-        margin-bottom: .5rem;
-        display: inline-block;
-        background-image: linear-gradient(to right, $color-blue, $color-blue-dark);
-        -webkit-background-clip: text;
-        color: transparent;
-    }
-    &:hover {
-        transform: translateY(-1.5rem) scale(1.03);
-    }
-}
-
-.custom-header {
-  padding-top: 6rem;
-  height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('AdobeStock_62695127.jpeg');
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  background-color: rgba($color-white, .8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.0rem rgba($color-black, .15);
+  transition: transform .3s;
+  &__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem;
+    display: inline-block;
+    // background-image: linear-gradient(to right, $color-blue, $color-blue-dark);
+    // -webkit-background-clip: text;
+    color: transparent;
   }
-}
-
-.heading-primary {
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    padding-top: 20rem;
-    margin-bottom: 6rem;
-    &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 3rem;
-        animation-name: moveInLeft;
-        animation-duration: 2s;
-        animation-delay: 1s;
-        animation-timing-function: ease-out;
-    }
-    &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1rem;
-        animation-name: moveInRight;
-        animation-duration: 2s;
-        animation-delay: 1s;
-        animation-timing-function: ease-out;
-    }
-}
-
-
-.section-about {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -10vh;
-}
-
-
-.section-features {
-  padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(79, 134, 198, 0.8), rgba(163, 218, 255, 0.8)), url('../images/AdobeStock_114530769.jpeg');
-  background-size: cover;
-  margin-top: -10rem;
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+  }
 }
