--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -37,7 +37,7 @@
   <div class="col-md-4 col-sm-12">
     <div class="form-group">
       <% label f, :preferred_contact_method, class: "control-label" %>
-      <%= select f, ["Phone Number", "Email Address", "Both"] %>
+      <%= select_tag :preferred_contact_method, options_for_select(["Phone Number", "Email Address", "Both"]), class: "form-control" %>
     </div>
   </div>
 </div>
@@ -54,10 +54,9 @@
       <%= text_field f, :part_number, class: "form-control" %>
     </div>
   </div>
-  <div class="col-md-4 col-sm-12">
     <div class="form-group">
       <%= label f, :quantity, class: "control-label" %>
-      <%= number_input f, :quantity, min: 1 %>
+      <%= number_field f, :quantity, min: 1 %>
     </div>
   </div>
 </div>
