--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= render 'shared/quote_form' %>
+        <%#= render 'shared/quote_form' #%>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
