--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,22 +6,21 @@
   <a class="navbar-brand mr-0" href='/'>
     <img src="../../assets/logo.png" alt="Adellis Corporation" id='adellis_logo'>
   </a>
-
   <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+    <span class="navbar-toggler-icon"></span>
+  </button>
   <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
     <ul class="navbar-nav mx-auto text-center">
-      <li class="nav-item active">
-          <button class='btn btn-default' data-toggle="modal" data-target="#quick_quote_modal">Quick Quote</button>
+      <li class="nav-item">
+        <button class='btn btn-default' data-toggle="modal" data-target="#quick_quote_modal">Quick Quote</button>
       </li>
     </ul>
     <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
       <li class="nav-item">
-        <%= link_to "Products", products_index_path, class: "nav-link" %>
+        <%= link_to "Products", products_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-          <%= link_to "Contact", contact_path, class: "nav-link" %>
+        <%= link_to "Contact", contact_path, class: "nav-link" %>
       </li>
     </ul>
   </div>
