--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Products#show</h1>
+<%= debug @product %>
+<div class='row'>
+    <div class='col-md-6 col-sm-12'>
+        <%= @product.name %>
+        <%= @product.part_number %>
+    </div>
+    <div class='col-md-6 col-sm-12'>
+        <%#= render 'shared/quote_form' #%>
+    </div>
 <p>Find me in app/views/products/show.html.erb</p>
